Initial pass at make eyes resizeable

--- a/testing/googly.html
+++ b/testing/googly.html
@@ -7,6 +7,7 @@
 	<script src="googly.js"></script>
 </head>
 <body>
+<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/2/27/TomCruiseDec08MTV_cropped.jpg/456px-TomCruiseDec08MTV_cropped.jpg" />
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae mattis purus. Aenean a nibh at diam sagittis tincidunt in vel ipsum. Fusce scelerisque lectus ipsum. Ut congue lorem ac tortor luctus eget suscipit magna pellentesque. Ut ac enim lorem, eget auctor erat. Vestibulum at nisi at justo malesuada pulvinar a vel elit. Nam ac lacus tellus, et porttitor risus. Suspendisse mauris nunc, blandit eu dictum nec, imperdiet vitae augue. Praesent lobortis ultrices rutrum. Sed vitae turpis a ligula mollis laoreet.
 
 Nunc ut arcu fermentum quam hendrerit malesuada. Vivamus convallis bibendum bibendum. Suspendisse facilisis tristique magna ac aliquet. Morbi quis iaculis purus. Praesent in sodales leo. Quisque hendrerit, nibh id pretium viverra, nunc elit iaculis risus, ut consectetur eros elit sed leo. Aenean ligula elit, congue id egestas non, facilisis a risus. Ut aliquet sem at neque convallis sit amet condimentum enim condimentum. Vestibulum venenatis sapien neque. Phasellus non metus enim. Suspendisse quis turpis sed turpis semper consectetur. Suspendisse quam tortor, vulputate ut condimentum nec, varius eget turpis. Maecenas id mi enim, sit amet malesuada felis. Maecenas iaculis, lectus sit amet vehicula feugiat, lectus mauris ultricies eros, id molestie ante sem sit amet diam.
