--- a/testing/googly.html
+++ b/testing/googly.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 	<link href="../css/ui-lightness/jquery-ui-1.9.2.custom.css" rel="stylesheet">
-	<link href="googly.css" rel="stylesheet">
-	<script src="../js/jquery-1.8.3.js"></script>
-	<script src="../js/jquery-ui-1.9.2.custom.js"></script>
-	<script src="googly.js"></script>
+	<link href="../css/googly.css" rel="stylesheet">
+	<script src="../js/lib/jquery-1.8.3.js"></script>
+	<script src="../js/lib/jquery-ui-1.9.2.custom.js"></script>
+	<script src="../js/googly.js"></script>
 </head>
 <body>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae mattis purus. Aenean a nibh at diam sagittis tincidunt in vel ipsum. Fusce scelerisque lectus ipsum. Ut congue lorem ac tortor luctus eget suscipit magna pellentesque. Ut ac enim lorem, eget auctor erat. Vestibulum at nisi at justo malesuada pulvinar a vel elit. Nam ac lacus tellus, et porttitor risus. Suspendisse mauris nunc, blandit eu dictum nec, imperdiet vitae augue. Praesent lobortis ultrices rutrum. Sed vitae turpis a ligula mollis laoreet.
