Added local save/restore and trashbin collision detection

--- a/testing/googly.html
+++ b/testing/googly.html
@@ -4,6 +4,7 @@
 	<link href="../css/googly.css" rel="stylesheet">
 	<script src="../js/lib/jquery-1.8.3.js"></script>
 	<script src="../js/lib/jquery-ui-1.9.2.custom.js"></script>
+	<script src="../js/lib/json2.js"></script>
 	<script src="../js/googly.js"></script>
 </head>
 <body>
