Direct library inject, compilation removed

--- a/extension/options.html
+++ b/extension/options.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>Googly Eye Settings</title>
   <link rel="stylesheet" type="text/css" href="css/chrome-bootstrap.css">
-  <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
+  <script src="js/lib/jquery-1.8.3.js" type="text/javascript"></script>
   <script src="js/options.js" type="text/javascript"></script>
 </head>
 <body class="frame">
