--- a/testing/googly.html
+++ b/testing/googly.html
@@ -4,6 +4,8 @@
 	<script src="../js/lib/jquery-1.8.3.js"></script>
 	<script src="../js/lib/jquery-ui-1.9.2.custom.js"></script>
 	<script src="../js/lib/json2.js"></script>
+	<script src="../js/lib/underscore-min.js"></script>
+	<script src="../js/lib/backbone-min.js"></script>
 	<script src="../js/googly.js"></script>
 </head>
 <body>
